Fix small layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,10 +13,12 @@ body {
   margin: 0px;
   overflow: visible;
   min-width: 370px;
+  text-underline-position: under;
+  text-decoration-thickness: 2px;
 }
 
 p {
-  line-height: 1.6;
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -80,7 +82,7 @@ svg {
 
 .blog-post .category a {
   color: black;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .blog-post a {
@@ -99,7 +101,7 @@ svg {
 
 html {
 	background-color: #F7F7F7;
-	color: #444;
+	color: #000;
 }
 
 html.dark {
@@ -180,6 +182,10 @@ nav a, nav a:visited, nav a:active {
 
   .main {
       padding: 0 0.5rem 0.5rem;
-  }  
+    }
+
+    body {
+      font-size: normal;
+    }
 
 }
